--- a/client/src/pages/Home/style.scss
+++ b/client/src/pages/Home/style.scss
@@ -34,3 +34,18 @@
 		}
 	}
 }
+
+.join-modal-container {
+	text-align: center;
+
+	display: flex;
+	flex-direction: column;
+
+	input {
+		margin-bottom: 8px;
+	}
+
+	button {
+		margin-bottom: 8px;
+	}
+}
