Add some styling and game state

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,9 +1,9 @@
 :root {
-	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+	font-family: Futura, system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
 	font-weight: 400;
 
-	color: #222;
+	color: #39393A;;
 	background-color: #ffffff;
 
 	font-synthesis: none;
