More stuff and make client use env for server url

--- a/client/src/components/Form/Input.scss
+++ b/client/src/components/Form/Input.scss
@@ -20,4 +20,8 @@
 	border: 2px solid #39393A;
 
 	border-radius: 8px;
+
+	-moz-appearance: textfield;
+	-webkit-appearance: textfield;
+	appearance: textfield;
 }
