--- a/client/src/components/Form/Input.scss
+++ b/client/src/components/Form/Input.scss
@@ -24,4 +24,25 @@
 	-moz-appearance: textfield;
 	-webkit-appearance: textfield;
 	appearance: textfield;
+
+	&.has-label {
+		border-top-left-radius: unset;
+		border-bottom-left-radius: unset;
+
+		border-left: unset;
+	}
+}
+
+.ok-label {
+	border: 2px solid #39393A;
+	border-top-left-radius: 8px;
+	border-bottom-left-radius: 8px;
+	background-color: #39393A;
+	// padding: 15px 30px;
+	color: #39393A;
+	border-right: unset;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
