--- a/client/src/pages/Game/Host.scss
+++ b/client/src/pages/Game/Host.scss
@@ -1,8 +1,10 @@
 .answer-shower {
 	width: 100%;
+	height: 100%;
 
 	.row {
 		width: 100%;
+		height: 100%;
 	}
 
 	span {
@@ -13,6 +15,8 @@
 
 		padding: 8px;
 		margin: 0;
+
+		flex: 1;
 
 		&.answer-red {
 			background-color: var(--question-red);
