--- a/client/src/pages/Quiz/Editor/editor.scss
+++ b/client/src/pages/Quiz/Editor/editor.scss
@@ -34,7 +34,7 @@
 
 .answer-editor {
 	display: grid;
-	grid-template-columns: 1fr 3fr;		
+	grid-template-columns: 1fr 3fr 0.5fr;
 }
 
 .white-label {
