--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -1,8 +1,8 @@
 .card {
 	background-color: white;
 
-	height: 50%;
-	width: 50%;
+	// height: 50%;
+	// width: 50%;
 
 	border: 2px solid #39393A;
 
