--- a/client/src/style.css
+++ b/client/src/style.css
@@ -8,7 +8,13 @@
 		-webkit-appearance: textfield;
 		appearance: textfield;
 	}
-  }
+}
+
+@font-face {
+	font-family: 'Futura';
+	src: url("/assets/fonts/Futura.woff");	
+}
+
 
 :root {
 	font-family: Futura, system-ui, Avenir, Helvetica, Arial, sans-serif;
